<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:ignore="GradleDependency">

    <EditText
        android:id="@+id/new_title"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/Title"
        android:inputType="text|textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/New_Title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/new_note"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/new_note"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autoText="false"
        android:background="@android:color/background_light"
        android:gravity="start|top"
        android:hint="@string/Note_h"
        android:inputType="textCapSentences|textMultiLine|textLongMessage"
        android:scrollbars="vertical"
        android:text="@string/New_Note"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="Deprecated"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>